--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Chelsea+Market&family=Roboto+Mono:wght@300&display=swap');
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -47,3 +49,123 @@ table {
 	border-spacing: 0;
 }
 
+/* Global */
+
+body {
+    font-family: 'Roboto Mono', sans-serif;
+    line-height: 1.2;
+    font-size: 1.05rem;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+/* Nav */
+
+nav {
+    text-align: center;
+    padding: 2rem 0;
+}
+
+nav a {
+    display: inline-block;
+    width: 7rem;
+    margin: 0 5rem;
+    padding: 10px 15px;
+    border-radius: 14px;
+}
+
+nav a:nth-child(1){
+    background-color: #FF764E;
+}
+nav a:nth-child(2){
+    background-color: #5ED3EB;
+}
+nav a:nth-child(3){
+    background-color: #FFCD69;
+}
+
+/* Header */
+
+div.container {
+    width: 975px;
+    margin: 2rem auto;
+}
+
+header {
+    text-align: center;
+}
+
+header img {
+    width: 15.5rem;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+header div.heading {
+    display: inline-block;
+    text-align: center;
+    vertical-align: top;
+}
+
+header h1 {
+    font-family: 'Chelsea Market';
+    font-size: 3.2rem;
+    margin: 2.5rem 3rem;
+}
+
+header p {
+    margin: 2rem 0;
+    font-size: 1.01rem
+}
+
+/* Content */
+
+.main {
+    background-color: #DDB9A3;
+    color: white;
+    padding: 0 1rem;
+    text-align: center;
+}
+
+.main p {
+    padding: 0.75rem
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.main2 {
+    text-align: center;
+    font-size: 0.69em;
+    line-height: 1.2;
+}
+
+.main2 div {
+    width: 25%;
+    margin: 0 auto;
+    padding: 2rem 0
+}
+
+.main2 img {
+    width: 70%;
+}
+
+/* Footer */
+
+footer {
+    background-color: #F9E7DC;
+}
+
+footer .footer-img {
+    height: 300px;
+    width: 100%;
+    overflow: hidden;
+}
+
+footer .footer-img img {
+    margin-top: -50px;
+}
